--- a/puctesis_refs.bib
+++ b/puctesis_refs.bib
@@ -1445,3 +1445,13 @@
 	volume = {98},
 	year = {2000}
 }
+@article{van2010general,
+	title={The general factor of personality: A meta-analysis of Big Five intercorrelations and a criterion-related validity study},
+	author={Van der Linden, Dimitri and te Nijenhuis, Jan and Bakker, Arnold B},
+	journal={Journal of research in personality},
+	volume={44},
+	number={3},
+	pages={315--327},
+	year={2010},
+	publisher={Elsevier}
+}
