--- a/puctesis_refs.bib
+++ b/puctesis_refs.bib
@@ -1455,3 +1455,9 @@
 	year={2010},
 	publisher={Elsevier}
 }
+@unpublished{LeaderChar2016,
+	author = {Hern{\'{a}}ndez-Lagos, Pablo and Reyes, Tom{\'{a}}s and Z{\'{u}}{\~{n}}iga, Roberto},
+	title = {{How Chief Executives' Characteristics Influence Economic Growth?}},
+	year = {2016}
+}
+
